@@ -155,9 +155,7 @@ else
 fi
 
 ### Cleanup options
-if [ "$duplicity_major" -ge 0 -a "$duplicity_minor" -ge 6 -a "$duplicity_sub" -ge 1 ]; then
-   execstr_options="${execstr_options} --extra-clean"
-fi
+execstr_options="${execstr_options} --extra-clean"
 
 ### Temporary directory
 if [ -n "$tmpdir" ]; then
@@ -172,12 +170,10 @@ if [ -n "$tmpdir" ]; then
 fi
 
 ### Archive directory
-# duplicity >= 0.6.01 enables the archive_dir by default, let's put it into /var/cache/backupninja/duplicity
+# duplicity now enables the archive_dir by default, let's put it into /var/cache/backupninja/duplicity
 # unless the user has specified it.
-if [ "$duplicity_major" -ge 0 -a "$duplicity_minor" -ge 6 -a "$duplicity_sub" -ge 1 ]; then
-   if echo "${options}" | grep -qv -- "--archive-dir" ; then
-      execstr_options="${execstr_options} --archive-dir /var/cache/backupninja/duplicity"
-   fi
+if echo "${options}" | grep -qv -- "--archive-dir" ; then
+   execstr_options="${execstr_options} --archive-dir /var/cache/backupninja/duplicity"
 fi
 
 ### Cleanup old backup sets (or not)
